[gd_scene load_steps=18 format=2]

[ext_resource path="res://dudes/dude.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/units/Wizard/blue/run_right_0002.png" type="Texture" id=2]
[ext_resource path="res://assets/units/Wizard/blue/run_right_0003.png" type="Texture" id=3]
[ext_resource path="res://assets/units/Wizard/blue/run_right_0004.png" type="Texture" id=4]
[ext_resource path="res://assets/units/Wizard/red/run_right_0003.png" type="Texture" id=5]
[ext_resource path="res://assets/units/Wizard/blue/run_right_0001.png" type="Texture" id=6]
[ext_resource path="res://assets/units/Wizard/red/run_right_0001.png" type="Texture" id=7]
[ext_resource path="res://assets/units/Wizard/red/run_right_0002.png" type="Texture" id=8]
[ext_resource path="res://assets/units/Wizard/red/run_right_0004.png" type="Texture" id=9]
[ext_resource path="res://assets/units/Wizard/Cast_0003.png" type="Texture" id=10]
[ext_resource path="res://assets/units/Wizard/Cast_0001.png" type="Texture" id=11]
[ext_resource path="res://assets/units/Wizard/Cast_0002.png" type="Texture" id=12]
[ext_resource path="res://dudes/Wizard/Wizard.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 120.0

[node name="Wizard" instance=ExtResource( 1 )]
script = ExtResource( 13 )
max_health = 7
movement_speed = 35
castle_damage = 4
regular_sprites = SubResource( 5 )
enemy_sprites = SubResource( 6 )

[node name="AnimatedSprite" parent="." index="2"]
frame = 0

[node name="Position2D" type="Position2D" parent="AnimatedSprite" index="0"]
position = Vector2( 6.65277, -11.7071 )

[node name="Cast_sprite" type="AnimatedSprite" parent="." index="3"]
visible = false
frames = SubResource( 3 )
speed_scale = 2.0

[node name="CastRange" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastRange" index="0"]
shape = SubResource( 4 )

[node name="CastCooldown" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="Cast_sprite" to="." method="_on_Cast_sprite_animation_finished"]
[connection signal="area_entered" from="CastRange" to="." method="_on_CastRange_area_entered"]
[connection signal="timeout" from="CastCooldown" to="." method="_on_CastCooldown_timeout"]
